<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/TextAppearance.Medium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AboutText" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Site" />

            <TextView
                android:id="@+id/Blog_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="Blog_View"
                android:text="@string/Site_URL"
                android:textColor="#0000FF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/E_mail" />

            <TextView
                android:id="@+id/Send_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="Send_Email"
                android:text="@string/E_mail_value"
                android:textColor="#0000FF" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Link_to_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:onClick="onVoteLinkClick" />

    <TextView
        android:id="@+id/Year_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Link_to_vote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/AboutYear" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:maxHeight="96dp"
        android:maxWidth="96dp"
        android:src="@drawable/ico96" />

    <Button
        android:id="@+id/Share_button_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:drawableLeft="@drawable/ic_menu_share"
        android:minHeight="48dp"
        android:onClick="onShareButtonClick"
        android:text="@string/Share_text"
        android:textSize="14sp"
        android:visibility="visible" />

   

</RelativeLayout>